bk_ida/gccida/g1/expand_builtin_init_dwarf_reg_sizes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_init_dwarf_reg_sizes/src/dwarf2out.c:906:30: error: use of undeclared identifier 'machine_mode'
v8 = adjust_address_1( v3, ( machine_mode)v1, v6, 1, 1); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_init_dwarf_reg_sizes/src/obj/dwarf2out.o] Error 1
